--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-preset-es2015": "^6.9.0",
     "gulp": "^3.9.1",
-    "gulp-rev-replace": "^0.4.3"
+    "gulp-rev-replace": "^0.4.3",
+    "run-sequence": "^1.2.1"
   },
   "md5": "http://staticadmin.joyomm.com/crm2.3/build/md5-map.json",
   "scripts": {
